--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -10,7 +10,7 @@
         href="/static/img/favicon.ico"
         type="image/x-icon"
       />
-      <!-- Also link to some fonts hosted by Google -->
+      <!-- Link to some fonts hosted by Google -->
       <link
         rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700"
@@ -21,7 +21,12 @@
         <h1><a href="/">Snippetbox</a></h1>
       </header>
       {{ template "nav" }}
-      <main>{{ template "main" . }}</main>
+
+      <main>
+          {{with .Flash}}
+            <div class="flash">{{ . }}</div>
+          {{end}}
+          {{ template "main" . }}</main>
       <footer>
         Powered by <a href="https://golang.org/">Go</a> in
         {{ .CurrentYear }}
