Added using r.Context() for auth. Also ui files are embedded in binary

--- a/ui/html/pages/signin.tmpl
+++ b/ui/html/pages/signin.tmpl
@@ -1,6 +1,7 @@
 {{ define "title" }}SignIn{{ end }}
 {{ define "main" }}
   <form action="/user/signin" method="POST" novalidate>
+    <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
     {{ range .Form.NonFieldErrors }}
       <div class="error">{{ . }}</div>
     {{ end }}
