--- a/ui/html/pages/create.tmpl
+++ b/ui/html/pages/create.tmpl
@@ -1,6 +1,7 @@
 {{ define "title" }}Create a Snippet{{ end }}
 {{ define "main" }}
   <form action="/snippet/create" method="POST">
+    <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
     <div>
       <label>Title:</label>
       {{ with .Form.FieldErrors.title }}
