--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -6,10 +6,11 @@
     </div>
     <div>
       <form action="/user/logout" method="post">
+        <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
         <button>Log out</button>
       </form>
-      <a href="/user/signup">Sign up</a>
       <a href="/user/signin">Sign in</a>
+      <a href="/user/signup">Sign up</a>
     </div>
   </nav>
 {{ end }}
