--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -3,6 +3,7 @@
     <div>
       <a href="/">Home</a>
       <a href="/snippet/create">Create snippet</a>
+      <a href="/about">About</a>
     </div>
     <div>
       <form action="/user/logout" method="post">
