--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -10,6 +10,7 @@
         <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
         <button>Log out</button>
       </form>
+      <a href="/user/account">Account</a>
       <a href="/user/signin">Sign in</a>
       <a href="/user/signup">Sign up</a>
     </div>
