--- a/ui/html/partials/nav.tmpl
+++ b/ui/html/partials/nav.tmpl
@@ -2,17 +2,22 @@
   <nav>
     <div>
       <a href="/">Home</a>
-      <a href="/snippet/create">Create snippet</a>
       <a href="/about">About</a>
+      {{ if .IsAuthenticated }}
+        <a href="/snippet/create">Create snippet</a>
+      {{ end }}
     </div>
     <div>
-      <form action="/user/logout" method="post">
-        <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
-        <button>Log out</button>
-      </form>
-      <a href="/user/account">Account</a>
-      <a href="/user/signin">Sign in</a>
-      <a href="/user/signup">Sign up</a>
+      {{ if .IsAuthenticated }}
+        <a href="/account/view">Account</a>
+        <form action="/user/logout" method="POST">
+          <input type="hidden" name="csrf_token" value="{{ .CSRFToken }}" />
+          <button>Logout</button>
+        </form>
+      {{ else }}
+        <a href="/user/signup">Signup</a>
+        <a href="/user/signin">Login</a>
+      {{ end }}
     </div>
   </nav>
 {{ end }}
